frontend/src/components/Header/Header.css
header {
  box-shadow: var(--shadow-1);
  background: var(--clr-white);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  z-index: 900;
  height: var(--header-height);
}
/* styles for smallers screen */
.navbar {
  height: 100%;
  display: flex;
  align-items: center;
  gap: 1.5rem;
}
.brand {
  color: var(--clr-primary-5);
  font-size: 1.3rem;
  font-weight: 800;
}

/* nav menu */
.nav-menu {
  position: fixed;
  top: 0;
  left: -100%;
  width: 60%;
  height: 100vh;
  background: var(--clr-primary-5);
  box-shadow: var(--shadow-4);
  padding: 5.5rem 1rem;
  transition: left var(--transition);
  z-index: 100;
}
.show-nav-menu {
  left: 0;
}
.nav-menu ul {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}
.main-nav-link {
  display: flex;
  align-items: center;
  text-transform: capitalize;
  font-size: 1rem;
  color: var(--clr-white);
  font-weight: 500;
  padding: 1rem;
  transition: var(--transition);
}
.main-nav-link:hover {
  background: var(--clr-primary-6);
  border-radius: var(--radius);
}
.main-nav-active {
  background: var(--clr-primary-6);
  border-radius: var(--radius);
}
.main-nav-link svg {
  display: inline-block;
  margin-right: 1rem;
  font-size: 1.2rem;
}
.nav-open {
  background: none;
  border: none;
  display: block;
  cursor: pointer;
}
.nav-open .menu-icon {
  font-size: 1.5rem;
  display: block;
}
.nav-close {
  position: absolute;
  top: 1.2rem;
  right: 1.3rem;
  background: none;
  border: none;
  cursor: pointer;
  padding: 0.1rem;
}
.nav-close .close-icon {
  display: block;
  font-size: 2rem;
  color: var(--clr-white);
}

/* cart button */
.nav-cta {
  display: flex;
  gap: 1.8rem;
  margin-left: auto;
  align-items: center;
}
.cart-button {
  display: block;
  position: relative;
  bottom: -5px;
  cursor: pointer;
}
.cart-icon {
  font-size: 1.5rem;
  color: var(--clr-grey-9);
}
.amount-container {
  position: absolute;
  top: -0.7rem;
  right: -0.9rem;
  /* width: 1.5rem;
  height: 1.3rem; */
  border: 2px solid var(--clr-white);
  border-radius: 5rem;
  /* background: var(--clr-primary-6); */
  background: var(--clr-accent-main);
  display: flex;
  align-items: center;
  justify-content: center;
}
.total-amount {
  color: var(--clr-white);
  font-size: 0.7rem;
  letter-spacing: 0.1em;
  padding: 0 5px;
}

/* login in button */
.navbar .login-btn {
  font-size: 0.9rem;
  font-weight: 500;
  letter-spacing: 0.4px;
  text-transform: uppercase;
  color: var(--clr-primary-5);
  background: none;
  border: 1px solid currentColor;
  border-radius: 5rem;
  padding: 0.1rem 1rem;
  display: inline-block;
  cursor: pointer;
  box-shadow: var(--shadow-1);
  transition: var(--transition);
}
.navbar .login-btn:hover {
  background: var(--clr-primary-5);
  color: var(--clr-white);
  border: 1px solid transparent;
}
.dropdown {
  display: block;
  position: relative;
}
.dropdown a {
  font-size: 0.9rem;
  color: var(--clr-grey-5);
  color: var(--clr-primary-5);
  text-transform: capitalize;
  letter-spacing: 0.8px;
  font-weight: 500;
  display: flex;
  align-items: center;
}
.dropdown-icon {
  font-size: 1.7rem;
}
.dropdown-content {
  position: absolute;
  display: none;
  right: 0;
  min-width: 10rem;
  padding: 0.5rem;
  z-index: 1;
  background: var(--clr-primary-6);
  border-radius: 3px;
}
.dropdown-content::before {
  content: '';
  width: 0;
  height: 0;
  border-left: 17px solid transparent;
  border-right: 17px solid transparent;
  border-bottom: 17px solid var(--clr-primary-6);
  z-index: -1;
  position: absolute;
  top: -0.5rem;
  right: 1rem;
}
.dropdown-content a {
  display: block;
  color: var(--clr-white);
  cursor: pointer;
  width: 100%;
  padding: 0.4rem;
  transition: background 0.3s;
}
/* .dropdown-content a:hover {
  background: var(--clr-primary-7);
  border-radius: 3px;
} */

.dropdown:hover .dropdown-content {
  display: block;
}

/* styles for bigger screen */
@media screen and (min-width: 680px) {
  :root {
    --header-height: 4.2rem;
  }
  .navbar {
    justify-content: space-between;
    gap: 2.7rem;
  }
  .brand {
    font-size: 1.6rem;
  }
  .nav-open {
    display: none;
  }
  /* nav menu */
  .nav-menu {
    position: unset;
    background: unset;
    height: unset;
    width: unset;
    box-shadow: unset;
    padding: 0;
  }
  .nav-menu ul {
    flex-direction: row;
    gap: 2.1rem;
  }
  .main-nav-link {
    color: var(--clr-grey-5);
    font-size: 1rem;
    padding: 0;
    position: relative;
  }
  .main-nav-link::after {
    content: '';
    position: absolute;
    bottom: -1px;
    left: 0;
    width: 100%;
    height: 10px;
    display: block;
    /* background: rgb(255, 206, 200); */
    background: var(--clr-primary-9);
    transition: var(--transition);
    transform: scaleY(0);
    transform-origin: bottom;
    z-index: -100;
  }
  .main-nav-link:hover {
    background: unset;
    border-radius: unset;
  }
  .main-nav-link:hover::after {
    transform: scaleX(100%);
  }
  .main-nav-active {
    background: unset;
    border-radius: unset;
  }
  /* active nav link */
  .main-nav-active::after {
    transform: scaleX(100%);
  }
  .main-nav-link svg {
    display: none;
  }
  .nav-close {
    display: none;
  }

  /* nav cta */
  .nav-cta {
    gap: 2.1rem;
    margin-left: 0;
    /* margin-left: auto; */
  }
  .cart-icon {
    font-size: 1.5rem;
  }
  .amount-container {
    top: -0.9rem;
    right: -1rem;
    /* width: 1.8rem;
    height: 1.6rem; */
  }
  .total-amount {
    padding: 0 7px;
    font-size: 0.8rem;
    font-weight: 300;
    letter-spacing: 1px;
  }
  .navbar .login-btn {
    font-size: 1rem;
    padding: 0.2rem 1.5rem;
  }
}

